# HaramBlock

./: .gitignore  .gitpod.yml  README.md  README_EN.md  setup.bat  setup.sh
app/: build.gradle  lint-baseline.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gender.param  quant.param
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  inference.cpp  inference.h  native-lib.cpp
app/src/main/java/com/haram/block/: ImageViewAccessibilityService.java  MainActivity.java  OverlayView.java  PerformanceMonitor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml
